--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ anaconda-navigator==1.10.0
 anaconda-project==0.8.3
 argh==0.26.2
 argon2-cffi==20.1.0
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astroid @ file:///C:/ci/astroid_1592487315634/work
+asn1crypto==1.5.1
+stroid @ file:///C:/ci/astroid_1592487315634/work
 astropy==4.0.2
 async-generator==1.10
 atomicwrites==1.4.0
