--- a/requirements.txt
+++ b/requirements.txt
@@ -1,155 +1,6 @@
-alabaster==0.7.12
-altair==5.4.1
-anaconda-client==1.7.2
-anaconda-navigator==1.10.0
-anaconda-project==0.8.3
-argh==0.26.2
-argon2-cffi==20.1.0
-asn1crypto==1.5.1
-astroid==2.10.5
-astropy==4.0.2
-async-generator==1.10
-atomicwrites==1.4.0
-attrs==20.3.0
-autopep8==1.5.7
-Babel==2.9.1
-backcall==0.2.0
-backports.functools-lru-cache==1.6.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-bcrypt==3.2.0
-beautifulsoup4==4.9.3
-bitarray==2.6.0
-bkcharts==0.2
-bleach==4.0.0
-blinker==1.8.2
-bokeh==2.4.3
-boto==2.49.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-cachetools==5.5.0
-certifi==2020.6.20
-cffi==1.15.1
-chardet==3.0.4
-charset-normalizer==3.4.0
-click==7.1.2
-cloudpickle==2.1.0
-clyent==1.2.2
-colorama==0.4.4
-comtypes==1.1.7
-conda==4.9.2
-conda-build==3.20.5
-conda-package-handling==1.7.3
-conda-verify==3.4.2
-contextlib2==0.6.0.post1
-contourpy==1.1.1
-cryptography==3.3.2
-cycler==0.10.0
-Cython==0.29.28
-cytoolz==0.11.0
-dask==2021.11.0
-decorator==4.4.2
-defusedxml==0.6.0
-diff-match-patch==20200407
-distributed==2021.11.0
-docutils==0.16
-entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-filelock==3.0.12
-flake8==4.0.1
-Flask==1.1.2
-fonttools==4.28.3
-fsspec==2021.11.0
-future==0.18.2
-gevent==21.12.0
-gitdb==4.0.11
-GitPython==3.1.43
-glob2==0.7
-greenlet==1.1.2
-h5py==3.1.0
-HeapDict==1.0.1
-html5lib==1.1
-idna==3.3
-imageio==2.9.0
-imagesize==1.2.0
-importlib-metadata==4.8.2
-importlib-resources==6.4.5
-iniconfig==1.1.1
-intervaltree==3.1.0
-ipykernel==5.5.5
-ipython==7.31.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-isort==5.9.3
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.18.1
-Jinja2==2.11.2
-joblib==1.1.0
-json5==0.9.5
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==7.1.2
-jupyter-console==6.4.0
-jupyter-core==4.9.2
-jupyterlab==3.2.5
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.10.1
-keyring==23.2.1
-kiwisolver==1.4.2
-lazy-object-proxy==1.6.0
-libarchive-c==2.9
-llvmlite==0.39.0
-locket==0.2.0
-lxml==4.6.3
-markdown-it-py==3.0.0
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-mccabe==0.6.1
-mdurl==0.1.2
-menuinst==1.4.16
-mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random==1.2.1
-mkl-service==2.3.0
-mock==4.0.3
-more-itertools==8.12.0
-mpmath==1.2.1
-msgpack==1.0.2
-multipledispatch==0.6.0
-narwhals==1.18.4
-navigator-updater==0.2.1
-nbclient==0.5.13
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.4
-networkx==2.6.3
-nltk==3.6.5
-nose==1.3.7
-notebook==6.4.10
-numba==0.54.0
-numexpr==2.7.3
-numpy==1.24.4
-numpydoc==1.2.1
-olefile==0.46
-openpyxl==3.0.10
-packaging==21.3
-pandas==1.4.2
-pandocfilters==1.5.0
-paramiko==2.9.2
-parso==0.8.3
-partd==1.2.0
-path==16.3.0
-pathlib2==2.3.5
-pathtools==0.1.2
-patsy==0.5.1
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.0.1
-pkginfo==1.8.2
-pluggy==1.0.0
-ply==3.11
-prometheus-client==0.11
+matplotlib==3.3.2
+matplotlib==3.7.5
+pandas==1.1.3
+pandas==2.0.3
+seaborn==0.11.0
+streamlit==1.40.1
